[gd_scene load_steps=7 format=3 uid="uid://1satggoreys0"]

[ext_resource type="Script" path="res://gui/views/instrument_view/InstrumentSettings.gd" id="1_vna7b"]
[ext_resource type="Theme" uid="uid://dkb62tku7dpgs" path="res://gui/theme/instruments/instrument_theme_gray.tres" id="1_x4dqd"]
[ext_resource type="PackedScene" uid="uid://dtvff0pavdph7" path="res://gui/widgets/PadSlider.tscn" id="2_misq6"]
[ext_resource type="PackedScene" uid="uid://dpno0cpboqdm0" path="res://gui/widgets/OptionPicker.tscn" id="3_f80nj"]
[ext_resource type="Texture2D" uid="uid://os3udjkncg7b" path="res://assets/icons/minus.png" id="4_q813e"]
[ext_resource type="Texture2D" uid="uid://34gjffqqcubk" path="res://assets/icons/plus.png" id="5_o6gqk"]

[node name="InstrumentSettings" type="PanelContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_x4dqd")
theme_type_variation = &"InstrumentSettingsPanel"
script = ExtResource("1_vna7b")

[node name="Layout" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"VBoxSpaced"

[node name="Metadata" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InstrumentLabel" type="Label" parent="Layout/Metadata"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "INSTRUMENT #"
uppercase = true

[node name="Pickers" type="HBoxContainer" parent="Layout/Metadata"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"HBoxSpaced"

[node name="CategoryList" type="PanelContainer" parent="Layout/Metadata/Pickers"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"InstrumentWidgetPanel"

[node name="CategoryPicker" parent="Layout/Metadata/Pickers/CategoryList" instance=ExtResource("3_f80nj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "TYPE"

[node name="InstrumentList" type="PanelContainer" parent="Layout/Metadata/Pickers"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"InstrumentWidgetPanel"

[node name="Layout" type="HBoxContainer" parent="Layout/Metadata/Pickers/InstrumentList"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"HBoxSpaced"

[node name="InstrumentPicker" parent="Layout/Metadata/Pickers/InstrumentList/Layout" instance=ExtResource("3_f80nj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Instrument Name"

[node name="Buttons" type="HBoxContainer" parent="Layout/Metadata/Pickers/InstrumentList/Layout"]
layout_mode = 2
alignment = 2

[node name="PrevInstrument" type="Button" parent="Layout/Metadata/Pickers/InstrumentList/Layout/Buttons"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(40, 26)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IncrementButton"
icon = ExtResource("4_q813e")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NextInstrument" type="Button" parent="Layout/Metadata/Pickers/InstrumentList/Layout/Buttons"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(40, 26)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IncrementButton"
icon = ExtResource("5_o6gqk")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Tuner" type="HBoxContainer" parent="Layout"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="LowPass" type="VBoxContainer" parent="Layout/Tuner"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="LowPassSlider" parent="Layout/Tuner/LowPass" instance=ExtResource("2_misq6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
default_value = Vector2i(128, 0)
horizontal_range = Vector2i(0, 128)
vertical_range = Vector2i(0, 9)

[node name="Label" type="Label" parent="Layout/Tuner/LowPass"]
auto_translate_mode = 1
layout_mode = 2
text = "LOW PASS FILTER PAD"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Volume" type="VBoxContainer" parent="Layout/Tuner"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeSlider" parent="Layout/Tuner/Volume" instance=ExtResource("2_misq6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
default_value = Vector2i(0, 256)
axis_mode = 2
horizontal_range = Vector2i(0, 0)
vertical_range = Vector2i(256, 0)

[node name="Label" type="Label" parent="Layout/Tuner/Volume"]
auto_translate_mode = 1
layout_mode = 2
text = "VOL"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
